Initial pass at this feature. Looks good!

--- a/dada/templates/draft_saved_notification_widget.tmpl
+++ b/dada/templates/draft_saved_notification_widget.tmpl
@@ -1,12 +1,21 @@
-<!-- begin draft_notification_widget.tmpl -->
+<!-- begin draft_saved_notification_widget.tmpl -->
 
-<h1>Draft Saved!</h1> 
+<!-- tmpl_if expr="(role eq 'draft')" -->
+    <h1>Draft Saved!</h1> 
+    <div class="buttonfloat">
+    <input type="button" id="keep_working_on_draft"     value="Keep Working on This Message"   class="processing" /> 
+    <input type="button" id="show_all_drafts"           value="Show All My Drafts"             class="processing" /> 
+    <input type="button" id="create_a_new_mass_mailing" value="Create a New Message"            class="processing" /> 
+    </div> 
+    <div class="floatclear"></div>
+<!-- /tmpl_if --> 
 
-<div class="buttonfloat">
-<input type="button" id="keep_working_on_draft"     value="Keep Working on This Message"   class="processing" /> 
-<input type="button" id="show_all_drafts"           value="Show All My Drafts"             class="processing" /> 
-<input type="button" id="create_a_new_mass_mailing" value="Create a New Message"            class="processing" /> 
-</div> 
-<div class="floatclear"></div>
+<!-- tmpl_if expr="(role eq 'stationary')" -->
+    <h1>Stationary Saved!</h1> 
+    <div class="buttonfloat">
+        <input type="button" id="keep_working_on_draft"     value="Thanks!"   class="processing" /> 
+    </div> 
+<!-- /tmpl_if --> 
 
-<!-- end draft_notification_widget.tmpl --> 
+
+<!-- end draft_saved_notification_widget.tmpl --> 
