It's the little things.

--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -27,12 +27,12 @@
 
 <h1>Drafts</h1> 
 
-<p>
+<p class="alert">
     <strong>
     Drafts
     </strong> 
     are unfinished messages, that haven't been sent out. 
-    Once a drafted message is sent out as a mass mailing, the draft message will
+    Once a drafted message is sent out as a mass mailing, the draft message will also
     be removed.
 </p>
 
@@ -170,7 +170,7 @@
 
 <h1>Stationary</h1> 
 
-<p>
+<p class="alert">
     <strong>
     Stationary
     </strong> 
