--- a/dada/templates/amazon_ses_get_stats_widget.tmpl
+++ b/dada/templates/amazon_ses_get_stats_widget.tmpl
@@ -1,42 +1,73 @@
 <!-- begin amazon_ses_get_stats_widget.tmpl --> 
 
-	<!-- tmpl_if has_ses_options --> 
+    <!-- tmpl_if using_ses --> 
+    
+    	<!-- tmpl_if has_ses_options --> 
 	
-		<!-- tmpl_if expr="(status == 200)" -->
-			<p>
-				Your current Amazon SES sending limit is: 
-					<strong>
-						<!-- tmpl_var MaxSendRate --> message(s)/second
-					</strong>
-				with a limit of 
-				<strong>
-					<!-- tmpl_var Max24HourSend --> messages
-				</strong> 
-				every 24 hours 
+    		<!-- tmpl_if expr="(status == 200)" -->
+    			<p>
+    				Your current Amazon SES sending limit is: 
+    					<strong>
+    						<!-- tmpl_var MaxSendRate --> message(s)/second
+    					</strong>
+    				with a limit of 
+    				<strong>
+    					<!-- tmpl_var Max24HourSend --> messages
+    				</strong> 
+    				every 24 hours 
 				
-				(<strong><!-- tmpl_var allowed_sending_quota_percentage -->%</strong>
+    				(<strong><!-- tmpl_var allowed_sending_quota_percentage -->%</strong>
 				
-				 which can be utilized by <!-- tmpl_var PROGRAM_NAME -->). 
+    				 which can be utilized by <!-- tmpl_var PROGRAM_NAME -->). 
 				 
-			 </p>
-			 <p>
-				<strong>
-					<!-- tmpl_var SentLast24Hours --> messages
-				</strong>
+    			 </p>
+    			 <p>
+    				<strong>
+    					<!-- tmpl_var SentLast24Hours --> messages
+    				</strong>
 	
-				have been reported as being sent in the last 24 hours.
-			</p>
-		<!-- tmpl_else --> 
-			<p>
-				<strong>Warning!</strong>  There's a problem with the AWS Credentials. 
-			</p>	
-		<!-- /tmpl_if -->
-	<!-- tmpl_else --> 
-		<p>
-			<strong>
-				AWS Credentials have not been set.
-			</strong>
-			 Amazon SES sending may not work correctly.</p>
-	<!-- /tmpl_if -->
+    				have been reported as being sent in the last 24 hours.
+    			</p>
+    		<!-- tmpl_else --> 
+    			<p>
+    				<strong>Warning!</strong>  There's a problem with the AWS Credentials. 
+    			</p>	
+    		<!-- /tmpl_if -->
+    	<!-- tmpl_else --> 
+    		<p>
+    			<strong>
+    				AWS Credentials have not been set.
+    			</strong>
+    			 Amazon SES sending may not work correctly.</p>
+    	<!-- /tmpl_if -->
+    <!-- /tmpl_if -->	
+    <!-- tmpl_if using_man --> 
+    
+        <p>
+    		Your current Mandrill sending limit is: 
+    			<strong>
+    				<!-- tmpl_var MaxSendRate --> message(s)/second
+    			</strong>
+    		with a limit of 
+    		<strong>
+    			<!-- tmpl_var Max24HourSend --> messages
+    		</strong> 
+    		every 24 hours 
+	
+    		(<strong><!-- tmpl_var allowed_sending_quota_percentage -->%</strong>
+	
+    		 which can be utilized by <!-- tmpl_var PROGRAM_NAME -->). 
+	 
+    	 </p>
+    	 <p>
+    		<strong>
+    			<!-- tmpl_var SentLast24Hours --> messages
+    		</strong>
+
+    		have been reported as being sent in the last 24 hours.
+    	</p>
+	
+    <!-- /tmpl_if --> 
+    
 
 <!-- end amazon_ses_get_stats_widget.tmpl --> 
