Makes sure the Plugin_URL var is passed, as well as only showing the link to d/l is there, if there's something to show.

--- a/dada/templates/plugins/tracker/message_individual_email_activity_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_individual_email_activity_report_table.tmpl
@@ -13,9 +13,11 @@
 				<p>
 					<strong> 
 						<!-- tmpl_var email -->
-						<a href="<!-- tmpl_var PLUGIN_URL -->?f=message_individual_email_activity_csv&mid=<!-- tmpl_var mid -->&email=<!-- tmpl_var email escape="URL" -->" style="color:#FFFFFF"> 
-						    (export .csv)
-						</a>
+						<!-- tmpl_if report --> 
+						    <a href="<!-- tmpl_var PLUGIN_URL -->?f=message_individual_email_activity_csv&mid=<!-- tmpl_var mid -->&email=<!-- tmpl_var email escape="URL" -->" style="color:#FFFFFF"> 
+						        (export .csv)
+						    </a>
+						<!-- /tmpl_if -->
 					</strong> 
 
 				</p>
