Gettin' those defaults correct.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -570,7 +570,7 @@ for it to work correctly. For help on setting the cronjob, see the
 				Soft Max Size for Messages:
 			</label>
 			<select name="bridge_Soft_Max_Size_Of_Any_Message" id="bridge_Soft_Max_Size_Of_Any_Message">
-				<option value="1048576" selected="selected">1 Megabyte</option> 
+				<option value="1048576">1 Megabyte</option> 
 				<option value="2097152">2 Megabytes</option> 
 				<option value="2621440">2.5 Megabytes</option>
 				<option value="3145728">3 Megabytes</option> 
@@ -591,7 +591,7 @@ for it to work correctly. For help on setting the cronjob, see the
 			<select name="bridge_Max_Size_Of_Any_Message" id="bridge_Max_Size_Of_Any_Message">
 				<option value="1048576">1 Megabyte</option> 
 				<option value="2097152">2 Megabytes</option> 
-				<option value="2621440" selected="selected">2.5 Megabytes</option>
+				<option value="2621440">2.5 Megabytes</option>
 				<option value="3145728">3 Megabytes</option> 
 				<option value="4194304">4 Megabytes</option> 
 				<option value="5242880">5 Megabytes</option> 
@@ -739,7 +739,7 @@ for it to work correctly. For help on setting the cronjob, see the
 					<option value="10">10</option> 
 					<option value="25">25</option> 
 					<option value="50">50</option> 
-					<option value="100" selected="selected">100</option> 
+					<option value="100">100</option> 
 					<option value="150">150</option> 
 					<option value="200">200</option> 
 				</select> 
