This fleshed out the Mandrill stuff, by providing a way to test your creds and a somewhat helpful message if there's something a-miss.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1592,6 +1592,17 @@ editors also have the ability to make simple HTML tables for basic layouts.
             <!-- tmpl_var mandrill_Allowed_Sending_Quota_Percentage_popup_menu -->% of the Total Mandrill Sending Quota. 
         </p>
         
+        <div class="buttonfloat"> 
+		<p>
+			<input type="button" class="processing test_mandrill_configuration" value="Test Your Mandrill Credentials"/>
+		</p>
+		</div>
+		<div class="floatclear"></div> 
+		<div id="test_mandrill_configuration_results" class="clearskiesbox"></div> 
+	
+	
+		
+		
 	</fieldset> 	
 	</div> 
 	
