--- a/dada/templates/amazon_ses_get_stats_widget.tmpl
+++ b/dada/templates/amazon_ses_get_stats_widget.tmpl
@@ -43,30 +43,39 @@
     <!-- /tmpl_if -->	
     <!-- tmpl_if using_man --> 
     
-        <p>
-    		Your current Mandrill sending limit is: 
-    			<strong>
-    				<!-- tmpl_var MaxSendRate --> message(s)/second
-    			</strong>
-    		with a limit of 
-    		<strong>
-    			<!-- tmpl_var Max24HourSend --> messages
-    		</strong> 
-    		every 24 hours 
+    
+        <!-- tmpl_if expr="(status != 0)" -->
 	
-    		(<strong><!-- tmpl_var allowed_sending_quota_percentage -->%</strong>
+    
+                <p>
+            		Your current Mandrill sending limit is: 
+            			<strong>
+            				<!-- tmpl_var MaxSendRate --> message(s)/second
+            			</strong>
+            		with a limit of 
+            		<strong>
+            			<!-- tmpl_var Max24HourSend --> messages
+            		</strong> 
+            		every 24 hours 
 	
-    		 which can be utilized by <!-- tmpl_var PROGRAM_NAME -->). 
+            		(<strong><!-- tmpl_var allowed_sending_quota_percentage -->%</strong>
+	
+            		 which can be utilized by <!-- tmpl_var PROGRAM_NAME -->). 
 	 
-    	 </p>
-    	 <p>
-    		<strong>
-    			<!-- tmpl_var SentLast24Hours --> messages
-    		</strong>
+            	 </p>
+            	 <p>
+            		<strong>
+            			<!-- tmpl_var SentLast24Hours --> messages
+            		</strong>
 
-    		have been reported as being sent in the last 24 hours.
-    	</p>
-	
+            		have been reported as being sent in the last 24 hours.
+            	</p>
+        <!-- tmpl_else --> 
+    	    <p>
+    			<strong>Warning!</strong>  There's a problem with the Mandrill Credentials. 
+    		</p>	
+    	<!-- /tmpl_if -->
+		
     <!-- /tmpl_if --> 
     
 
