--- a/dada/templates/archive_index_nav_table_widget.tmpl
+++ b/dada/templates/archive_index_nav_table_widget.tmpl
@@ -6,11 +6,11 @@
   <td valign="top" align="left" width="33%">
    <p>
     <strong>
-		<!-- tmpl_if prev_link_start --> 
-				&lt; &lt; 
-				<a href="<!-- tmpl_var url -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list escape="URL" -->&start=<!-- tmpl_var prev_link_start -->">
-					Previous
-				</a>
+        <!-- tmpl_if expr="((prev_link_start >= 0) && (prev_link_start ne ''))" -->
+        	&lt; &lt; 
+			<a href="<!-- tmpl_var url -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list escape="URL" -->&start=<!-- tmpl_var prev_link_start -->">
+				Previous
+			</a>
 		<!-- tmpl_else --> 
 			&nbsp;
 		<!-- /tmpl_if --> 
@@ -22,7 +22,7 @@
   <td valign="top" align="center" width="33%"> 
    <p>
     <strong>
-		<a href="<!-- tmpl_var PROGRAM_URL -->/<!-- tmpl_var flavor_label -->/<!-- tmpl_var list_settings.list -->/">
+		<a href="<!-- tmpl_var url -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list_settings.list -->">
 			Index
 		</a>
 	</strong>
@@ -33,8 +33,8 @@
   <td valign="top" align="right" width="33%"> 
    <p>
     <strong>
-		<!-- tmpl_if next_link_start --> 
-		<a href="<!-- tmpl_var url -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list escape="URL" -->&start=<!-- tmpl_var next_link_start -->">
+        <!-- tmpl_if expr="((next_link_start >= 0) && (next_link_start ne ''))" -->
+		    <a href="<!-- tmpl_var url -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list escape="URL" -->&start=<!-- tmpl_var next_link_start -->">
 				Next
 			</a> &gt;&gt;
 		<!-- tmpl_else --> 
