--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -351,7 +351,7 @@
 
 				<!-- tmpl_if expr="(root_login == 1 || list_settings.allow_profile_editing == 1)" --> 
 					 <div class="buttonfloat">
-					  <input type="submit" value="Edit Information" class="cautionary" />
+					  <input type="submit" value="Update Information" class="cautionary" />
 					 </div>
 				<!-- /tmpl_if --> 
 
@@ -394,7 +394,7 @@
 					<!-- tmpl_else -->
 					<div class="clearskiesbox">
 						<p>
-							Editing the Profile Password is <strong>disabled</strong>. 
+							Updating the Profile Password is <strong>disabled</strong>. 
 						</p>
 					</div>
 					<!-- /tmpl_if --> 
