--- a/dada/installer-disabled/templates/core5_filemanager_config_js.tmpl
+++ b/dada/installer-disabled/templates/core5_filemanager_config_js.tmpl
@@ -6,6 +6,7 @@
         "defaultViewMode": "grid",
         "autoload": true,
         "showFullPath": false,
+        "showTitleAttr": false,
         "browseOnly": false,
         "showConfirmation": true,
         "showThumbs": true,
@@ -19,6 +20,7 @@
         "fileRoot": "<!-- tmpl_var fileRoot -->",
         "relPath": false,
         "logger": false,
+        "capabilities": ["select", "download", "rename", "move", "delete", "replace"],
         "plugins": []
     },
     "security": {
@@ -41,9 +43,11 @@
             "xlsx",
             "ppt",
             "pptx",
+            "csv",
             "ogv",
             "mp4",
             "webm",
+            "m4v",
             "ogg",
             "mp3",
             "wav"
@@ -56,7 +60,8 @@
     },
     "exclude": {
         "unallowed_files": [
-            ".htaccess"
+            ".htaccess",
+            "web.config"
         ],
         "unallowed_dirs": [
             "_thumbs",
@@ -73,14 +78,20 @@
             "gif",
             "png",
             "svg"
-        ]
+        ],
+        "resize": {
+        	"enabled":true,
+        	"maxWidth": 1280,
+            "maxHeight": 1024
+        }
     },
     "videos": {
         "showVideoPlayer": true,
         "videosExt": [
             "ogv",
             "mp4",
-            "webm"
+            "webm",
+            "m4v"
         ],
         "videosPlayerWidth": 400,
         "videosPlayerHeight": 222
@@ -91,6 +102,17 @@
             "ogg",
             "mp3",
             "wav"
+        ]
+    },
+    "edit": {
+        "enabled": true,
+        "lineNumbers": true,
+        "lineWrapping": true,
+        "codeHighlight": false,
+        "theme": "elegant",
+        "editExt": [
+            "txt",
+            "csv"
         ]
     },
     "extras": {
