--- a/dada/installer-disabled/templates/core5_filemanager_config_pl.tmpl
+++ b/dada/installer-disabled/templates/core5_filemanager_config_pl.tmpl
@@ -1,6 +1,7 @@
 package Filemanager::Config;
 
 our $config = {
+  base_path => '/home/USER/SITE/Filemanager/', # I don't even think this is used... 
   uploads_directory => "<!-- tmpl_var uploads_directory -->", #Absolute path to where the root of your files are
   url_path => "<!-- tmpl_var url_path -->" #The root that the user thinks the files are at
 }
