--- a/dada/installer-disabled/templates/kcfinder_config_php.tmpl
+++ b/dada/installer-disabled/templates/kcfinder_config_php.tmpl
@@ -4,29 +4,65 @@
   *
   *      @desc Base configuration file
   *   @package KCFinder
-  *   @version 2.51
-  *    @author Pavel Tzonkov <pavelc@users.sourceforge.net>
-  * @copyright 2010, 2011 KCFinder Project
-  *   @license http://www.opensource.org/licenses/gpl-2.0.php GPLv2
-  *   @license http://www.opensource.org/licenses/lgpl-2.1.php LGPLv2
+  *   @version 3.12
+  *    @author Pavel Tzonkov <sunhater@sunhater.com>
+  * @copyright 2010-2014 KCFinder Project
+  *   @license http://opensource.org/licenses/GPL-3.0 GPLv3
+  *   @license http://opensource.org/licenses/LGPL-3.0 LGPLv3
   *      @link http://kcfinder.sunhater.com
   */
 
-// IMPORTANT!!! Do not remove uncommented settings in this file even if
-// you are using session configuration.
-// See http://kcfinder.sunhater.com/install for setting descriptions
+/* IMPORTANT!!! Do not comment or remove uncommented settings in this file
+   even if you are using session configuration.
+   See http://kcfinder.sunhater.com/install for setting descriptions */
 
 $_CONFIG = array(
 
+
+// GENERAL SETTINGS
+
     'disabled' => true,
+    'uploadURL' => "upload",
+    'uploadDir' => "",
+    'theme' => "default",
+
+    'types' => array(
+
+    // (F)CKEditor types
+        'files'   =>  "",
+        'flash'   =>  "swf",
+        'images'  =>  "*img",
+
+    // TinyMCE types
+        'file'    =>  "",
+        'media'   =>  "swf flv avi mpg mpeg qt mov wmv asf rm",
+        'image'   =>  "*img",
+    ),
+
+
+// IMAGE SETTINGS
+
+    'imageDriversPriority' => "imagick gmagick gd",
+    'jpegQuality' => 90,
+    'thumbsDir' => ".thumbs",
+
+    'maxImageWidth' => 0,
+    'maxImageHeight' => 0,
+
+    'thumbWidth' => 100,
+    'thumbHeight' => 100,
+
+    'watermark' => "",
+
+
+// DISABLE / ENABLE SETTINGS
+
     'denyZipDownload' => false,
     'denyUpdateCheck' => false,
     'denyExtensionRename' => false,
 
-    'theme' => "oxygen",
 
-    'uploadURL' => "upload",
-    'uploadDir' => "",
+// PERMISSION SETTINGS
 
     'dirPerms' => 0755,
     'filePerms' => 0644,
@@ -36,8 +72,8 @@ $_CONFIG = array(
         'files' => array(
             'upload' => true,
             'delete' => true,
-            'copy' => true,
-            'move' => true,
+            'copy'   => true,
+            'move'   => true,
             'rename' => true
         ),
 
@@ -48,20 +84,10 @@ $_CONFIG = array(
         )
     ),
 
-    'deniedExts' => "exe com msi bat php phps phtml php3 php4 cgi pl",
+    'deniedExts' => "exe com msi bat cgi pl php phps phtml php3 php4 php5 php6 py pyc pyo pcgi pcgi3 pcgi4 pcgi5 pchi6",
 
-    'types' => array(
 
-        // CKEditor & FCKEditor types
-        'files'   =>  "",
-        'flash'   =>  "swf",
-        'images'  =>  "*img",
-
-        // TinyMCE types
-        'file'    =>  "",
-        'media'   =>  "swf flv avi mpg mpeg qt mov wmv asf rm",
-        'image'   =>  "*img",
-    ),
+// MISC SETTINGS
 
     'filenameChangeChars' => array(/*
         ' ' => "_",
@@ -75,30 +101,28 @@ $_CONFIG = array(
 
     'mime_magic' => "",
 
-    'maxImageWidth' => 0,
-    'maxImageHeight' => 0,
-
-    'thumbWidth' => 100,
-    'thumbHeight' => 100,
-
-    'thumbsDir' => ".thumbs",
-
-    'jpegQuality' => 90,
-
     'cookieDomain' => "",
     'cookiePath' => "",
     'cookiePrefix' => 'KCFINDER_',
 
-    // THE FOLLOWING SETTINGS CANNOT BE OVERRIDED WITH SESSION CONFIGURATION
+
+// THE FOLLOWING SETTINGS CANNOT BE OVERRIDED WITH SESSION SETTINGS
+
+    '_normalizeFilenames' => false,
+    //'_check4htaccess' => true,
     '_check4htaccess' => false,
     '_tinyMCEPath' => "<!-- tmpl_var i_tinyMCEPath -->",
 
-    '_sessionVar' => &$_SESSION['KCFINDER'],
+    //'_sessionVar' => &$_SESSION['KCFINDER'],
+    '_sessionVar' => "KCFINDER",
     //'_sessionLifetime' => 30,
     '_sessionDir' => "<!-- tmpl_var i_sessionDir -->",
-
     //'_sessionDomain' => ".mysite.com",
     //'_sessionPath' => "/my/path",
+
+    //'_cssMinCmd' => "java -jar /path/to/yuicompressor.jar --type css {file}",
+    //'_jsMinCmd' => "java -jar /path/to/yuicompressor.jar --type js {file}",
+    
 );
 
 ?>
