--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -33,6 +33,7 @@
 
 	<!-- tmpl_include test_sent_notice_widget.tmpl --> 
 	<!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
+    <!-- tmpl_include ses_email_verification_widget.tmpl -->
 
     <!-- tmpl_if draft_id --> 
         <!-- tmpl_if expr="(draft_role eq 'draft')" --> 
