--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -31,6 +31,7 @@
 
 <!-- tmpl_include test_sent_notice_widget.tmpl --> 
 <!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
+<!-- tmpl_include ses_email_verification_widget.tmpl -->
 
 <!-- tmpl_if list_settings.group_list --> 
     <div class="clearskiesbox">
