--- a/dada/templates/web_services.tmpl
+++ b/dada/templates/web_services.tmpl
@@ -8,9 +8,21 @@
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
 
+<!-- tmpl_if keys_reset --> 
+    	<div class="clearskiesbox" id="alertbox">
+        <p>
+         Public and Private Keys have been reset.
+        </p>
+		<div style="text-align: center;">
+		<input type="button" class="small_button fade_me" value="Thanks!" />
+		</div>
+	</div>
+<!-- /tmpl_if -->
 
-<form> 
-    
+
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+    <input type="hidden" name="flavor"  value="web_services" />
+    <input type="hidden" name="process" value="reset_keys" />
 <fieldset> 
     
 <p><strong>Public API Key:</strong></p> 
@@ -24,6 +36,13 @@
 <p>
 <input type="text" class="full" value="<!-- tmpl_var list_settings.private_api_key escape="HTML" -->" >
 </p>
+
+<div class="buttonfloat">
+ <input type="submit" class="processing" value="Reset Keys" />
+</div>
+<div class="floatclear"></div>
+</form> 
+
 
 </fieldset> 
 
